--- a/css/bear.css
+++ b/css/bear.css
@@ -12,7 +12,11 @@ html {
 
 @media only screen and (min-width: 1196px) {
   #bear{
-    position: absolute;
     float: left;
+  }
+}
+@media only screen and (max-width: 1196px) {
+  #bear{
+    posit
   }
 }
