--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -9,6 +9,9 @@ html {
 }
 
 /* Write your solution here */
-@media only screen and (max-width: ) {
-
+@media only screen and (max-width: 1400px) {
+  #bear{
+    position: absolute;
+    top: 100px;
+  }
 }
