--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,7 +10,7 @@ html {
 
 /* Write your solution here */
 @media only screen and (max-width: 1400px) {
-  #bear{
+  #ostrich{
     position: absolute;
     top: 100px;
   }
