--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,6 +10,6 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width: 406px){
+@media only screen and (max-width: 1090px) (min-width: 406px) and (){
 
 }
