--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,6 +10,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 1090px) and (min-width: 406px){
-  top: 100px;
+@media only screen and (max-width: 1400px) {
+  #ostrich{
+    position: absolute;;
+    top: -50px;
+  }
 }
