--- a/css/monkey.css
+++ b/css/monkey.css
@@ -11,7 +11,7 @@ html {
 /* Write your solution here */
 
 @media only screen and (max-width: 1090px) and (min-width: 406px){
-  #ostrich{
+  #monkey{
     position: absolute;;
     top: -50px;
   }
